--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
             <div class="nav-container">
                 
                 <div class="logo">
-                    <div class="logo-icon"><img src="s-logo.png"></div>
+                    <div class="logo-icon"><img src="ima-logo.png"></div>
                     <div class="logo-main"></div>
             
                 </div>
